<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/hardwareId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hardwareId"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Spinner
        android:id="@+id/hardwareIdList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/userId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userId"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Spinner
        android:id="@+id/userIdList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/assign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/assign" android:onClick="onClickAssign"/>

    <Button
        android:id="@+id/verify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="@string/onVerify"
        android:text="@string/verify" />

    <TextView
        android:id="@+id/lastScan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lastScan"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</LinearLayout>